[package]
name = "noentiendo"
version = "0.1.0"
edition = "2021"

# Shared dependencies across all targets
[dependencies]
instant = { version = "0.1", features = [ "wasm-bindgen" ] }
async-trait = "0.1"

# Dependencies used for the WebAssembly target
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "0.2"
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
# We need to stay on an older version to match wgpu, a dependent of pixels
# ...even though we don't actually use pixels when compiling for wasm32
version = "0.3.53"
features = [
  'HtmlCanvasElement',
  'CanvasRenderingContext2d',
  'CssStyleDeclaration',
  'KeyboardEvent',
  'Document',
]

# Dependencies used when building for desktop
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
winit = "0.26"
winit_input_helper = "0.12"
pixels = "0.9"
rand = "0.8"
clap = { version = "3.2", features = ["derive"]}

[profile.release]
debug = true

[lib]
name = "libnoentiendo"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "noentiendo-desktop"
path = "src/main.rs"
