[package]
name = "noentiendo"
version = "0.1.0"
edition = "2021"
authors = ["noentiendo team <noentiendo@breq.dev>", "Brooke Chalmers <breq@breq.dev>"]
description = "A modular retro emulation framework"
documentation = "https://noentiendo.breq.dev/doc/libnoentiendo/"
homepage = "https://noentiendo.breq.dev/"
repository = "https://github.com/breqdev/noentiendo"
keywords = ["6502", "emulation", "retro", "wasm", "commodore"]
license = "AGPL-3.0-or-later"

# Shared dependencies across all targets
[dependencies]
instant = { version = "0.1", features = [ "wasm-bindgen" ] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }

[dependencies.pixels]
git = "https://github.com/parasyte/pixels"
rev = "860559272a09b1bf2e2a021b627ea33453d7f029"

# Dependencies used for the WebAssembly target
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
  'HtmlCanvasElement',
  'CanvasRenderingContext2d',
  'CssStyleDeclaration',
  'KeyboardEvent',
  'Document',
  'NamedNodeMap',
  'Attr',
  'Gamepad',
  'GamepadButton',
  'console',
]

# Dependencies used when building for desktop
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
winit = "0.28"
winit_input_helper = "0.14"
rand = "0.8"
clap = { version = "3.2", features = ["derive"]}
gilrs = "0.10.1"
egui = "0.21"
egui-wgpu = "0.21"
egui-winit = "0.21"
wgpu = "0.15"

[profile.release]
debug = true

[lib]
name = "libnoentiendo"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "noentiendo-desktop"
path = "src/main.rs"
